--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -254,7 +254,7 @@
             <p class="text-muted mb-4" style="font-size: 0.9rem !important;">Registration takes less than a minute but
               gives you full control over your orders.</p>
             <hr />
-            <form action="#" th:action="@{/signup}" method="POST" class="needs-validation" novalidate="">
+            <form action="#" th:action="@{/signup}" method="POST" class="needs-validation">
               <div class="row gx-4 gy-3">
                 <div class="col-sm-6 form-group">
                   <label class="form-label" for="reg-fn">Full name</label>
