--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -279,7 +279,7 @@
                                                         <input type="text" class="form-control" id="inputFullName" placeholder="Full name" th:field="*{userInfo.name}">
                                                     </div>
                                                     <div class="mb-3 col-md-6">
-                                                        <label for="inputLastName">Last name</label>
+                                                        <label for="inputLastName">BirthDay</label>
                                                         <input type="date" class="form-control" id="inputLastName" placeholder="BirthDay" th:field="*{userInfo.birthDay}">
                                                     </div>
                                                 </div>
@@ -290,6 +290,20 @@
                                                 <div class="mb-3">
                                                     <label for="inputAddress">Address</label>
                                                     <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" th:field="*{userInfo.address}">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="ROLE_ADMIN" checked>
+                                                        <label class="form-check-label" for="exampleRadios1">
+                                                            Admin
+                                                        </label>
+                                                    </div>
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="ROLE_USER">
+                                                        <label class="form-check-label" for="exampleRadios2">
+                                                            User
+                                                        </label>
+                                                    </div>
                                                 </div>
                                                 <button type="submit" class="btn btn-primary">Save changes</button>
                                             </form>
