--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -274,20 +274,20 @@
               <div class="input-group form-group mb-3"><i
                   class="ci-mail position-absolute top-50 translate-middle-y text-muted fs-base ms-3"></i>
                 <div class="form-floating mb-3">
-                  <input type="email" name="username" class="form-control rounded-3" id="floatingInput" placeholder="name@example.com">
+                  <input type="email" name="username" class="form-control rounded-3" id="floatingInput" placeholder="name@example.com" th:value="${param.username}">
                   <label for="floatingInput">Email address</label>
                 </div>
               </div>
               <div class="input-group form-group mb-3"><i
                   class="ci-locked position-absolute top-50 translate-middle-y text-muted fs-base ms-3"></i>
                 <div class="form-floating mb-3">
-                  <input type="password" name="password" class="form-control rounded-3" id="floatingPassword" placeholder="Password">
+                  <input type="password" name="password" class="form-control rounded-3" id="floatingPassword" placeholder="Password" th:value="${param.password}">
                   <label for="floatingPassword">Password</label>
                 </div>
               </div>
               <div class="d-flex flex-wrap justify-content-between">
                 <div class="form-check d-flex">
-                  <input class="form-check-input" type="checkbox" id="remember_me">
+                  <input class="form-check-input" type="checkbox" name="remember-me" id="remember_me" th:checked="${param.remember}">
                   <label class="form-check-label" for="remember_me">Remember me</label>
                 </div>
                 <a class="forgot-password nav-link-inline fs-sm" href="account-password-recovery.html">Forgot
