--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -347,13 +347,13 @@
                         <div class="card-body">
                             <ul class="list-group list-group-sm list-group-flush-y list-group-flush-x">
                                 <li class="list-group-item d-flex">
-                                    <span>Subtotal</span> <span class="ms-auto fs-sm" th:text="'$' + ${subtotal}">$89.00</span>
+                                    <span>Subtotal</span> <span class="ms-auto fs-sm" th:text="'$' + ${price}">$89.00</span>
                                 </li>
                                 <li class="list-group-item d-flex">
                                     <span>Tax</span> <span class="ms-auto fs-sm">$00.00</span>
                                 </li>
                                 <li class="list-group-item d-flex fs-lg fw-bold">
-                                    <span>Total</span> <span class="ms-auto fs-sm" th:text="'$' + ${subtotal}">$89.00</span>
+                                    <span>Total</span> <span class="ms-auto fs-sm" th:text="'$' + ${price}">$89.00</span>
                                 </li>
                                 <li class="list-group-item fs-sm text-center text-gray-500">
                                     Shipping cost calculated at Checkout *
@@ -586,7 +586,7 @@
 
             <!-- Header-->
             <div class="offcanvas-header lh-fixed fs-lg">
-                <strong class="mx-auto">Your Cart (2)</strong>
+                <strong class="mx-auto">Your Cart (<span th:text="${count}"></span>)</strong>
             </div>
 
             <!-- List group -->
@@ -636,7 +636,7 @@
 
             <!-- Footer -->
             <div class="offcanvas-footer justify-between lh-fixed fs-sm bg-light">
-                <strong>Subtotal</strong> <strong class="ms-auto">$89.00</strong>
+                <strong>Subtotal</strong> <strong class="ms-auto">$<span th:text="${price}"></span></strong>
             </div>
 
             <!-- Buttons -->
@@ -762,6 +762,18 @@
                                 </div>
                             </li>
                         `
+                        const elements = document.querySelectorAll("#cart-modal-product .col-8");
+                        const sum = Array.from(elements).reduce((accumulator, currentElement) => {
+                            const value = parseFloat(currentElement.querySelector(".text-muted").textContent.trim() * currentElement.querySelector(".form-select").textContent.trim());
+                            return accumulator + (isNaN(value) ? 0 : value);
+                        }, 0);
+                        const count = Array.from(elements).reduce((accumulator, currentElement) => {
+                            const value = parseFloat(currentElement.querySelector(".form-select").textContent.trim());
+                            return accumulator + (isNaN(value) ? 0 : value);
+                        }, 0);
+
+                        document.querySelector(".offcanvas-footer .ms-auto").textContent = `$${sum}`;
+                        document.querySelector(".offcanvas-header .mx-auto").textContent = `Your Cart (${count})`;
                     });
                 },
                 error: function() {
